# IFS06-TE

./: .gitignore  2024-08-01_18-16-57_Landa_test.csv  2024-08-01_18-20-13_landa_circuit.csv  README.md
TE_dashplot/: prueba_arduino.py  pyproject.toml
TE_dashplot - copia/: README.md  adjusting_to_arduino.py
TE_dashplot/dashplot/alberto/: dash_csv_20_11.py  pruebaDASH3.py  test_bootstrap.py
TE_dashplot/dashplot/alberto/dash/: dash_24_11.py  styles.css
TE_dashplot/dashplot/alberto/flask/: app2.py
TE_dashplot/dashplot/alberto/flask copy/: app.py  app2.py  nrf24._rx_test.py
TE_dashplot/dashplot/alberto/flask copy/static/: main.js
TE_dashplot/dashplot/alberto/flask/static/: main.js
TE_dashplot/dashplot/alberto/flask/templates/: index.html
TE_dashplot/dashplot/beatriz/java/: app.py  app2.py  read_initialize.py
TE_dashplot/dashplot/beatriz/java/static/: main.js
TE_dashplot/dashplot/beatriz/java/templates/: index.html
TE_dashplot/dashplot/beatriz/old/: prueba_23_enero.py  suspension_test1_rl.csv
TE_dashplot/dashplot/fadrique/: ExtendData.py  ExtendData_test.ipynb  FullExtendData.py
TE_dashplot/dashplot/fadrique/app/: app.py
TE_influx_cloud/: README.md  influx_to_csv.py  influx_to_csv_GUI.py  influx_to_csv_tkGUI.py  replicate_auto.py  replicate_auto_onboard.py  test.py
TE_influx_cloud/scratches/: convert_df_dt_float.py  create_bucket.py  (+4 more)
TE_onboard/: python_realtime_onboard.py
TE_realtime_receiver/: README.md  functions_reader.py  functions_utils.py  python_realtime.py
TE_stm32/: README.md  SPI_stm32.txt  stm.html  stm.ipynb  stm32_rpi.txt
(+37 files in other folders)
