[tool.poetry]
name = "dashplot"
version = "0.1.0"
description = ""
authors = ["DonX123 <fadriquealvarezdetoledoabaitua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
plotly = "^5.17.0"
dash = "^2.14.0"
pandas = "^2.1.1"
dash-bootstrap-components = "^1.5.0"
pyorbital = "^1.8.0"
jupyter-dash = "^0.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
